# ihna_kozhuhov_image_analysis

./: .gitignore  CMakeLists.txt  MANIFEST.in  README  compile_options.h  imageanalysis.cpp  iman  iman-update  init.h  main.cpp  setup.py  test_api.py  test_exceptions.py  test_roi.py
c_python/: __init__.h  core.h
c_python/accumulators/: Accumulator.h  FrameAccumulator.h  MapFilter.h  MapPlotter.h  TraceAutoReader.h  __init__.h  exceptions.h
c_python/compression/: __init__.h  compressor.h  decompressor.h  exceptions.h
c_python/isolines/: LinearFitIsoline.h  NoIsoline.h  TimeAverageIsoline.h  __init__.h  exceptions.h  isoline.h
c_python/source_files/: core.cpp  core.h  exceptions.cpp  exceptions.h  test.cpp
c_python/sourcefiles/: AnalysisSourceFile.h  Chunk.h  ChunkCreator.h  CompChunk.h  CompressedFileTrain.h  CompressedFileTrainIterator.h  CompressedSourceFile.h  CostChunk.h  DataChunk.h  EpstChunk.h  FileTrain.h  FileTrainIterator.h  Frame.h  GreenChunk.h  GreenSourceFile.h  HardChunk.h  IsoiChunk.h  IsoiChunkIterator.h  RoisChunk.h  SoftChunk.h  SourceFile.h  StreamFileTrain.h  StreamFileTrainIterator.h  StreamSourceFile.h  SyncChunk.h  TrainSourceFile.h  __init__.h  exceptions.h
c_python/synchronization/: ExternalSynchronization.h  NoSynchronization.h  QuasiStimulusSynchronization.h  QuasiTimeSynchronization.h  Synchronization.h  __init__.h  exceptions.h
c_python/tracereading/: TraceReader.h  TraceReaderAndCleaner.h  __init__.h  exceptions.h
cpp/: core.h  exceptions.h
cpp/accumulators/: Accumulator.cpp  Accumulator.h  FrameAccumulator.cpp  FrameAccumulator.h  MapFilter.cpp  MapFilter.h  MapPlotter.cpp  MapPlotter.h  TraceAutoReader.cpp  TraceAutoReader.h
cpp/compression/: BaseCompressor.cpp  BaseCompressor.h  Compressor.cpp  Compressor.h  Decompressor.cpp  Decompressor.h
cpp/isolines/: Isoline.cpp  Isoline.h  LinearFitIsoline.cpp  LinearFitIsoline.h  NoIsoline.cpp  NoIsoline.h  TimeAverageIsoline.cpp  TimeAverageIsoline.h
cpp/misc/: LinearFit.cpp  LinearFit.h
cpp/source_files/: AnalysisSourceFile.cpp  AnalysisSourceFile.h  Chunk.cpp  Chunk.h  ChunkHeader.cpp  ChunkHeader.h  CompChunk.cpp  CompChunk.h  CompressedFileTrain.cpp  CompressedFileTrain.h  CompressedSourceFile.cpp  CompressedSourceFile.h  CostChunk.cpp  CostChunk.h  DataChunk.cpp  Frame.h  (+34 more)
ihna/: __init__.py
(+141 files in other folders)
